minor: make tab truncation controllable to prevent it with onboarding cards

--- a/packages/heartwood-components/components/07-navigation/tabs.scss
+++ b/packages/heartwood-components/components/07-navigation/tabs.scss
@@ -4,10 +4,13 @@
 	flex-flow: column;
 	align-items: center;
 	flex: 0 1 auto;
-	padding: 0 spacing('base');
 
-	+ .tab {
-		padding-left: 0;
+	.tab-group--is-padded & {
+		padding: 0 spacing('base');
+
+		+ .tab {
+			padding-left: 0;
+		}
 	}
 }
 
